fix: flow tightness add: horizontal scroll

--- a/src/styles/cf/ui/cf-input.styl
+++ b/src/styles/cf/ui/cf-input.styl
@@ -23,6 +23,8 @@ cf-input
 		border-radius 0
 		border none
 		-webkit-appearance none
+		position relative
+		z-index 2
 
 		// styling
 		font-family 'Roboto', sans-serif
@@ -48,11 +50,13 @@ cf-input
 
 		
 	&[disabled="disabled"]
+		pointer-events none
+
 		input
 			background $color-chat-reponse-user-bg
 		
 		.cf-input-button
-			pointer-events none
+			background $color-chat-reponse-user-bg
 
 	&[error]
 		input
@@ -76,7 +80,7 @@ button.cf-input-button
 	overflow hidden
 	right 12px
 	bottom 12px
-	z-index 2
+	z-index 3
 	border-radius 50%
 	will-change background, border
 	transition background $anim-time * 0.5 $anim-easeOut, border $anim-time * 0.5 $anim-easeOut
