--- a/src/styles/cf/ui/chat/cf-chat.styl
+++ b/src/styles/cf/ui/chat/cf-chat.styl
@@ -11,7 +11,7 @@ cf-chat
 	padding 20px
 
 	overflow-x hidden
-	overflow-y scroll
+	// overflow-y scroll
 
 	// flow children to bottom
 	display flex
@@ -23,26 +23,26 @@ cf-chat
 	transition padding-bottom $anim-time * 0.5 $anim-easeOut
 
 	// TODO: Style scrollbars...
-	&::-webkit-scrollbar
-		background red
-		width 12px
-	&::-webkit-scrollbar-button
-		background yellow
-		width 12px
-	&::-webkit-scrollbar-track
-		background brown
-		width 12px
-	&::-webkit-scrollbar-track-piece
-		background pink
-		width 12px
-	&::-webkit-scrollbar-thumb
-		background orange
-		width 12px
-	&::-webkit-scrollbar-corner
-		background blue
-		width 12px
-	&::-webkit-resizer
-		background green
-		width 12px
+	// &::-webkit-scrollbar
+	// 	background red
+	// 	width 12px
+	// &::-webkit-scrollbar-button
+	// 	background yellow
+	// 	width 12px
+	// &::-webkit-scrollbar-track
+	// 	background brown
+	// 	width 12px
+	// &::-webkit-scrollbar-track-piece
+	// 	background pink
+	// 	width 12px
+	// &::-webkit-scrollbar-thumb
+	// 	background orange
+	// 	width 12px
+	// &::-webkit-scrollbar-corner
+	// 	background blue
+	// 	width 12px
+	// &::-webkit-resizer
+	// 	background green
+	// 	width 12px
 
 
