--- a/src/styles/cf/ui/control-elements/cf-control-elements.styl
+++ b/src/styles/cf/ui/control-elements/cf-control-elements.styl
@@ -4,13 +4,15 @@
 
 cf-input-control-elements
 	width auto
-	max-height 110px
+	height auto
 	overflow hidden
 	display block
-	padding 0px 15px
-	margin 10px 0px
+	margin 0px 15px
 	position relative
-	white-space nowrap
+	overflow-x scroll
+	margin-bottom -15px // hide scrollbar under input field!
+	position relative
+	z-index 0
 
 	.cf-button
 		margin-bottom 15px
@@ -18,12 +20,36 @@ cf-input-control-elements
 	.cf-button
 		display: inline-block
 	
+	cf-list, cf-list-button
+		will-change height
+		transition height $anim-time * 0.5 $anim-easeOut
+
+	&.one-row
+		cf-list, cf-list-button
+			height 65px
+	&.two-row
+		cf-list, cf-list-button
+			height 125px
+	
+	cf-list
+		display block
+		height 0px
+
+		&.disabled
+			pointer-events none
+	
 	cf-list-button
 		display block
-		background red
-		position absolute
+		position fixed
 		z-index 2
-		right 0px
-		height 100%
+		height 0px
 		width 50px
 		cursor pointer
+
+		&:nth-child(1)
+			background linear-gradient(to left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%)
+			left 0px
+
+		&:nth-child(2)
+			right 0px
+			background linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%)
